# homers

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  Taskfile.yml  config.toml  dashboard.json  docker-compose.yml  entrypoint.sh  flake.nix
.direnv/: flake-profile-1-link
.github/workflows/: build-latest.yml  build-tag.yml  build.yml
root/etc/s6-overlay/s6-rc.d/00-init/: run  up
root/etc/s6-overlay/s6-rc.d/10-homers/: run
src/: config.rs  http_server.rs  main.rs  main.rs.bak  main.rs.test  plex.rs  prometheus.rs  providers.rs  tasks.rs
src/providers/: jellyfin.rs  lidarr.rs  mod.rs  overseerr.rs  plex.rs  radarr.rs  readarr.rs  sonarr.rs  structs.rs  tautulli.rs
src/providers/structs/: jellyfin.rs  lidarr.rs  mod.rs  overseerr.rs  plex.rs  radarr.rs  sonarr.rs  tautulli.rs
src/sonarr/: mod.rs
src/tautulli/: mod.rs  structs.rs
