[package]
name = "homers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.34"
clap = "4.5.1"
clap-verbosity-flag = "2.2.0"
figment = { version = "0.10.14", features = ["toml", "env"] }
json = "0.12.4"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["full"] }
