[package]
name = "homers"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.34"
clap = "4.5.1"
clap-verbosity-flag = "2.2.0"
figment = { version = "0.10.14", features = ["toml", "env"] }
ipgeolocate = "0.3.6"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.19.0"
prometheus = "0.13.3"
prometheus-client = "0.22.1"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
rocket = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
simple_logger = "4.3.3"
tokio = { version = "1.35.1", features = ["full"] }
