[package]
name = "homers"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = "0.4.34"
clap = "4.5.1"
clap-verbosity-flag = "2.2.0"
figment = { version = "0.10.14", features = ["toml", "env"] }
futures = "0.3.31"
headers = "0.4.0"
ipgeolocate = "0.3.6"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.19.0"
prometheus = "0.13.3"
prometheus-client = "0.22.1"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
signal = "0.7.0"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
